# grovedb-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  RUST_PARITY_COMMIT  autogen.sh  configure.ac
.github/workflows/: ci.yml
bench/: Makefile.am  corpus.cpp  insertion.cpp  insertion_storage.cpp
corpus/: corpus.json
docs/: acceptance-criteria.md  accepted-divergences.md  api-contract-matrix.md  compat-invariants.md  corpus-regression.md  error-string-parity-policy.md  grovedb-facade-spec.md  runbook-facade-parity.md  rust-cpp-feature-matrix.md
docs/perf/: corpus_proof_deltas.md  insertion_deltas.md  methodology-lock.md  performance-baselines.md  regression-thresholds.json
docs/perf/raw/: cpp_corpus_bench_20260314T152639Z.txt  cpp_insertion_bench_20260314T152502Z.txt  cpp_insertion_storage_bench_20260314T152604Z.txt  rust_insertion_bench_20260309T231432Z.txt
include/: Makefile.am  binary.h  chunk.h  chunk_depth.h  chunk_producer.h  chunk_restore.h  corpus.h  cost_utils.h  element.h  grove_version.h  grovedb.h  hash.h  hex.h  merk.h  merk_cache.h  merk_costs.h  merk_node.h  merk_storage.h  operation_cost.h  proof.h  query.h  replication.h  rocksdb_wrapper.h  storage_flags.h  value_defined_cost.h
m4/: ax_cxx_compile_stdcxx_20.m4
src/: Makefile.am  binary.cpp  chunk.cpp  chunk_depth.cpp  chunk_producer.cpp  chunk_restore.cpp  corpus.cpp  element.cpp  grovedb.cpp  hash.cpp  hex.cpp  insert_profile.cpp  insert_profile.h  main.cpp  merk.cpp  merk_cache.cpp  merk_node.cpp  merk_storage.cpp  proof.cpp  query.cpp  replication.cpp  rocksdb_wrapper.cpp  storage_flags.cpp
tests/: Makefile.am  README.md  binary_api_contract_tests.cpp  chunk_depth_tests.cpp  chunk_producer_tests.cpp  chunk_proof_tests.cpp  chunk_restore_tests.cpp  chunk_util_tests.cpp  corpus_tests.cpp  element_api_contract_tests.cpp  element_tests.cpp  grovedb_facade_api_contract_tests.cpp  grovedb_facade_cost_tests.cpp  grovedb_facade_proof_tests.cpp  grovedb_facade_tests.cpp  grovedb_proof_byte_roundtrip_tests.cpp  merk_api_contract_tests.cpp  merk_cost_shape_tests.cpp  merk_storage_tests.cpp  merk_tests.cpp  prefix_parity_tests.cpp  proof_api_contract_tests.cpp  query_api_contract_tests.cpp  raw_iterator_tests.cpp  replication_tests.cpp  rust_grovedb_differential_fuzz_parity_tests.cpp  rust_grovedb_facade_cost_parity_tests.cpp  rust_grovedb_facade_parity_tests.cpp  rust_grovedb_proof_parity_tests.cpp  rust_grovedb_tx_conflict_parity_tests.cpp  rust_merk_chunk_parity_tests.cpp  rust_merk_feature_storage_parity_tests.cpp  rust_merk_proof_parity_tests.cpp  rust_merk_storage_parity_tests.cpp  rust_merk_storage_read_parity_tests.cpp  rust_replication_parity_tests.cpp  rust_storage_batch_parity_tests.cpp  rust_storage_cost_shape_parity_tests.cpp  rust_storage_export_byte_parity_tests.cpp  rust_storage_parity_tests.cpp  (+12 more)
tools/: check_accepted_divergence_expiry.sh  check_error_string_policy.sh  check_facade_parity_mode_coverage.sh  check_perf_regression_thresholds.sh  check_rust_parity_commit_pin.sh  run_cpp_corpus_bench.sh  run_cpp_insertion_bench.sh  run_cpp_insertion_storage_bench.sh  run_differential_fuzz.sh  run_fixture_regen_check.sh  run_parity_ctest.sh  run_rust_insertion_bench.sh
tools/corpus/: Cargo.toml  README.md
tools/corpus/benches/: corpus_proof_benchmark.rs
tools/corpus/src/: main.rs
tools/insertion/: Cargo.toml  README.md
tools/insertion/benches/: insertion_benchmark.rs
tools/rust-storage-tools/: Cargo.toml
