[package]
name = "insertion"
version = "0.1.0"
edition = "2021"

[dependencies]
grovedb = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0" }
grovedb-path = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0" }
grovedb-version = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0" }
rand = "0.8"
tempfile = "3.20.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "insertion_benchmark"
harness = false

[workspace]
