[package]
name = "grovedb-cpp-storage-tools"
version = "0.1.0"
edition = "2021"

[features]
rocksdb_storage = ["grovedb-storage/rocksdb_storage"]

[dependencies]
grovedb = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0" }
grovedb-element = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0" }
grovedb-storage = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0", default-features = false }
grovedb-path = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0" }
grovedb-merk = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0" }
grovedb-version = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0" }
grovedb-costs = { git = "https://github.com/dashpay/grovedb.git", tag = "v4.0.0" }
rocksdb = { git = "https://github.com/QuantumExplorer/rust-rocksdb.git", rev = "52772eea7bcd214d1d07d80aa538b1d24e5015b7" }
